--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -50,16 +50,16 @@
             </div>
         </nav> 
 
-        <div th:replace="fragments/inventory :: content"></div>
+        <div th:replace="~{fragments/product :: content}"></div>
 
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>   
-        <script src="inventory.js"></script>
+        <script src="product.js"></script>
 
         <script>
-            let x = new Inventory();
+            new Product();
         </script> 
 
     </body>
