--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -44,6 +44,12 @@
                                     <li><a class="dropdown-item" href="#">Something else here</a></li>
                                 </ul>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="javascript: document.logoutForm.submit()">Logout</a>
+                                <form name="logoutForm" th:action="@{/logout}" method="post" th:hidden="true">
+                                    <input hidden type="submit"/>
+                                </form>
+                            </li>
                         </ul>
                     </div>
                 </div>
