login page done

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,7 +10,7 @@
         <link href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.min.css" rel="stylesheet">    
     </head>
     <body>
-        <nav class="navbar bg-body-tertiary sticky-top bg-dark" data-bs-theme="dark">
+        <nav class="navbar bg-body-tertiary sticky-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Anubis Industries</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
@@ -19,7 +19,7 @@
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                            <img src="logo.png" alt="anubis industries logo" width="100">
+                            <img src="images/logo.png" alt="anubis industries logo" width="100">
                         </h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
