--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,19 +1,71 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+
+<html lang="en">
     <head>
-        <title>Spring Security Example </title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Home Page</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">   
+        <style>
+            body{
+                height: 100vh;
+            }
+            .container{
+                height: 100%;
+            }
+        </style>
     </head>
     <body>
-        <div th:if="${param.error}">
-            Invalid username and password.
+        <div class="container d-flex align-items-center justify-content-center">
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    <div class="row mb-3 justify-content-center">
+                        <div class="col-10">                                
+                            <img src="images/logo.png" alt="anubis industries logo" class="img-fluid">
+                        </div>
+                    </div>
+                    <form th:action="@{/login}" method="post">                
+                        <div class="row mb-3">
+                            <div class="col-sm-3">
+                                <label for="inputUsername" class="col-form-label">Username</label>
+                            </div>
+                            <div class="col-sm-9">
+                                <input type="text" id="inputUsername" name="username" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3 ">
+                            <div class="col-sm-3">
+                                <label for="inputPassword" class="col-form-label">Password</label>
+                            </div>
+                            <div class="col-sm-9">
+                                <input type="password" id="inputPassword" name="password" class="form-control">
+                            </div>
+                        </div>
+                        <div class="row mb-3 justify-content-end">
+                            <div class="col-auto">
+                                <button type="submit" class="btn btn-primary">Login</button>
+                            </div>
+                        </div>
+                    </form>
+
+                    <div class="row justify-content-center">
+                        <div class="col-auto">
+                            <div th:if="${param.error}">
+                                Invalid username and password.
+                            </div>
+                            <div th:if="${param.logout}">
+                                You have been logged out.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div th:if="${param.logout}">
-            You have been logged out.
-        </div>
-        <form th:action="@{/login}" method="post">
-            <div><label> User Name : <input type="text" name="username"/> </label></div>
-            <div><label> Password: <input type="password" name="password"/> </label></div>
-            <div><input type="submit" value="Sign In"/></div>
-        </form>
+
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>    
+
     </body>
 </html>
