--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -27,18 +27,18 @@
                     </div>
                     <form th:action="@{/login}" method="post">                
                         <div class="row mb-3">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 <label for="inputUsername" class="col-form-label">Username</label>
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 <input type="text" id="inputUsername" name="username" class="form-control">
                             </div>
                         </div>
                         <div class="row mb-3 ">
-                            <div class="col-sm-3">
+                            <div class="col-sm-4">
                                 <label for="inputPassword" class="col-form-label">Password</label>
                             </div>
-                            <div class="col-sm-9">
+                            <div class="col-sm-8">
                                 <input type="password" id="inputPassword" name="password" class="form-control">
                             </div>
                         </div>
@@ -49,9 +49,9 @@
                         </div>
                     </form>
 
-                    <div class="row justify-content-center">
+                    <div class="row mb-3 justify-content-center">
                         <div class="col-auto">
-                            <div th:if="${param.error}">
+                            <div th:if="${param.error}" class="text-warning">
                                 Invalid username and password.
                             </div>
                             <div th:if="${param.logout}">
