--- a/src/main/resources/templates/fragments/product.html
+++ b/src/main/resources/templates/fragments/product.html
@@ -14,29 +14,15 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col">
-                    <table id="table-product" class="table table-striped" style="width:100%">
+                    <table id="table-product" class="table table-striped" width="100%">
                         <thead>
                             <tr>
                                 <th>Name</th>
                                 <th>Variation</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
-                                <td>Tiger Nixon</td>
-                                <td>System Architect</td>
-                            </tr>
-                            <tr>
-                                <td>Garrett Winters</td>
-                                <td>Accountant</td>
-                            </tr>                            
-                            <tr>
-                                <td>Donna Snider</td>
-                                <td>Customer Support</td>
-                            </tr>
-                        </tbody>
                         <tfoot>
                             <tr>
                                 <th>Name</th>
