--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,7 +56,7 @@
             </div>
         </nav> 
 
-        <div th:replace="~{fragments/product :: content}"></div>
+        <div th:replace="~{fragments/product/list :: content}"></div>
 
         <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
