--- a/src/main/resources/templates/fragments/product/list.html
+++ b/src/main/resources/templates/fragments/product/list.html
@@ -8,7 +8,7 @@
             <div class="row">
                 <div class="col">
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">New</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProductModal">New</button>
                         <button type="button" class="btn btn-primary">Edit</button>
                         <button type="button" class="btn btn-primary">Delete</button>
                     </div>
@@ -16,34 +16,29 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col">
-                    <table id="table-product" class="table table-striped" style="width:100%">
+                    <table id="productTable" class="table table-striped" style="width:100%">
                         <thead>
                             <tr>
+                                <th>Alias</th>
                                 <th>Name</th>
                                 <th>Variation</th>
                             </tr>
                         </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Name</th>
-                                <th>Variation</th>
-                            </tr>
-                        </tfoot>
                     </table>
                 </div>
             </div>
 
             <!-- Modal -->
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="addProductModal" tabindex="-1" aria-labelledby="addProductModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">New Product</h1>
+                            <h1 class="modal-title fs-5" id="addProductModalLabel">New Product</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
                             <div class="container-fluid">
-                                <form id="addProduct" th:action="@{/product/add}" method="post">                
+                                <form id="addProductForm" th:action="@{/product/add}" method="post">                
                                     <div class="row mb-3">
                                         <div class="col">
                                             <label for="inputAlias" class="col-form-label">Alias</label>
@@ -61,12 +56,8 @@
                                             <button type="button" id="addVariation" class="btn btn-dark">Add Variation</button>
                                         </div>
                                     </div>
-                                    <div id="variationList">
-                                        <div class="row mb-3">
-                                            <div class="col">
-                                                <label for="inputVariationName" class="col-form-label">Variation Name</label>
-                                                <input type="text" id="inputVariationName" name="variation" class="form-control">
-                                            </div>
+                                    <div class="row mb-3">
+                                        <div class="col" id="variationList">
                                         </div>
                                     </div>
                                 </form>
@@ -74,7 +65,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                            <button type="button" id="saveNewProduct" class="btn btn-primary">Save</button>
+                            <button type="button" id="saveNewProductButton" class="btn btn-primary">Save</button>
                         </div>
                     </div>
                 </div>
