--- a/src/main/resources/templates/fragments/product/list.html
+++ b/src/main/resources/templates/fragments/product/list.html
@@ -5,18 +5,29 @@
     </head>
     <body>
         <div class="container" th:fragment="content">
+            <div class="row justify-content-center">
+                <div class="col-auto">
+                    <p class="fw-bold fs-5">Product List</p>
+                </div>                    
+            </div>
             <div class="row">
                 <div class="col">
                     <div class="btn-group" role="group">
-                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProductModal">New</button>
-                        <button type="button" class="btn btn-primary">Edit</button>
-                        <button type="button" class="btn btn-primary">Delete</button>
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addProductModal">
+                            <i class="fa-regular fa-plus"></i>
+                        </button>
+                        <button type="button" id="editProduct" class="btn btn-primary disabled">
+                            <i class="fa-regular fa-edit"></i>
+                        </button>
+                        <button type="button" id="deleteProduct" class="btn btn-primary disabled">
+                            <i class="fa-regular fa-trash-can"></i>
+                        </button>
                     </div>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col">
-                    <table id="productTable" class="table table-striped" style="width:100%">
+                    <table id="productTable" class="table table-striped table-hover" style="width:100%">
                         <thead>
                             <tr>
                                 <th>Alias</th>
