--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,6 +63,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>   
         <script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
         <script src="https://cdn.datatables.net/2.0.3/js/dataTables.bootstrap5.js"></script>
+        <script src="https://kit.fontawesome.com/556c21261e.js" crossorigin="anonymous"></script>
 
         <script src="js/product.js"></script>
 
