added method security

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head><title>Error Occurred</title></head>
+    <head><title>Anubis Industries - Error</title></head>
     <body>
         <h1>Error Occurred!</h1>    
         <b>[<span th:text="${status}">status</span>]
